--- a/CheckLists/Info.plist
+++ b/CheckLists/Info.plist
@@ -47,5 +47,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Cookie-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
